--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-charts": "^4.0.5",
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
